# ptmud-scratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  params.json
src/: CMakeLists.txt  autoconf.h.in  basic_item.cpp  basic_item.h  basic_object.h  character.cpp  character.h  item.cpp  item.h  location.cpp  location.h  player.cpp  player.h  ptmud.cpp  ptmud.h
src/net/: CMakeLists.txt  basic_connection.cpp  basic_connection.h  basic_server.cpp  basic_server.h  net.cpp  net.h  net_private.h
